Tue Nov  6 16:50:00 2012  Masaki Matsushita  <glass.saga@gmail.com>

	* lib/tempfile.rb (Tempfile#inspect): fix confusing #inspect.
	  previous Tempfile#inspect says it is a File, but actually
	  it is not a File.

	    t = Tempfile.new("foo") #=> #<File:/tmp/foo20121106-31970-1ffbum0>
	    t.is_a? File #=> false

	  now Tempfile#inspect returns like:

	    t = Tempfile.new("foo")
	    #=> #<Tempfile:/tmp/foo20121106-31970-1ffbum0>

	  [ruby-core:47544] [Bug #7027]

Tue Nov  6 16:22:30 2012  Naohisa Goto  <ngotogenome@gmail.com>

	* atomic.h: add #include <sys/atomic.h> for the workaround of
	  header file name conflict of atomic.h with /usr/include/atomic.h
	  on Solaris 10. [ruby-dev:46414] [Bug #7287]

Tue Nov  6 14:38:00 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/win32ole/test_win32ole.rb: now source encoding is UTF-8, so
	  binary strings in old scripts are dangerous.

Tue Nov  6 14:25:09 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/net/protocol.rb (Net::InternetMessageIO#each_crlf_line):
	  don't use /n in universal regexp. [ruby-dev:46394] [Bug #7278]

Tue Nov  6 09:42:26 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_b): Add String#b, returning a copied string
	  whose encoding is ASCII-8BIT. [ruby-dev:45992] [Feature #6767]

Tue Nov  6 09:37:57 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* ruby.c (load_file_internal): set default source encoding as
	  UTF-8 instead of US-ASCII. [ruby-core:46021] [Feature #6679]

	* parse.y (parser_initialize): set default parser encoding as
	  UTF-8 instead of US-ASCII.

Tue Nov  6 05:48:06 2012  Hiroshi Shirosaki  <h.shirosaki@gmail.com>

	* test/ruby/test_require.rb
	  (TestRequire#test_require_to_path_redefined_in_load_path,
	   TestRequire#test_require_to_str_redefined_in_load_path):
	  Suppress method redefined warning when test-all with RUBYOPT=-w.

Mon Nov  5 11:40:00 2012  Mark Somerville  <mark@scottishclmibs.com>

	* thread_pthread.c (rb_reserved_fd_p): fix typo in macro check